<resources>
    <string name="app_name">Carpet App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_login">Log In</string>
    <string name="str_register">Sign Up</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_password">Password</string>
    <string name="str_dont_account">Don\'t have an account?</string>
    <string name="str_name">Name</string>
    <string name="str_surname">Surname</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_network_error">Could not connect to the network</string>
    <string name="str_login_success">Log in success!</string>
    <string name="str_fill_all_feads">Make sure all fields are filled in !</string>
    <string name="str_need_fill">You need to fill</string>
    <string name="str_sign_up_success">Sign up success!</string>
    <string name="str_pass_did_not_match">Passwords did not match</string>
    <string name="str_logout_success">Logout success!</string>
    <string name="str_checking_information">Oops! Please check your information again, there is a problem</string>
    <string name="str_employee">Employee</string>
    <string name="str_product">Product</string>
    <string name="str_factory">Factory</string>
    <string name="str_sale">Sale</string>
    <string name="str_profile">Profile</string>
    <string name="str_search_by_name">Search by name</string>
    <string name="str_thats_all">That\'s all!</string>
    <string name="str_relogin">Please log back in!</string>
    <string name="str_fill_in_optional">Fill in optional information</string>
    <string name="str_admin">Admin</string>
    <string name="str_customer">Customer</string>
    <string name="str_active">Active</string>
    <string name="str_not_active">Not active</string>
    <string name="str_blocked">Blocked</string>
    <string name="str_select_role">Select role (optional)</string>
    <string name="str_select_status">Select status (optional)</string>
    <string name="str_apply">Apply</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_filter">Filter</string>
    <string name="str_status">Status</string>
    <string name="str_role">Role</string>
    <string name="str_save">Save</string>
    <string name="str_invisible_user">Make invisible</string>
    <string name="str_visible_user">Make visible</string>
    <string name="str_for_exit">Please double click back button for exit</string>
    <string name="str_user_info">User info</string>
    <string name="str_user_updated">User information updated</string>
    <string name="str_info_exit">Please press back or cancel to exit</string>
    <string name="str_save_changing">Do you want to save the change?</string>
    <string name="str_ok">Ok</string>

    <string-array name="role_list">
        <item>ADMIN</item>
        <item>EMPLOYEE</item>
        <item>CUSTOMER</item>
    </string-array>

    <string-array name="status_list">
        <item>ACTIVE</item>
        <item>NOT ACTIVE</item>
        <item>BLOCKED</item>
    </string-array>

</resources>