<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/employeeFragment"
        android:icon="@drawable/ic_groups"
        android:title="@string/str_employee" />

    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_product"
        android:title="@string/str_product" />

    <item
        android:id="@+id/factoryFragment"
        android:icon="@drawable/ic_factory"
        android:title="@string/str_factory" />

    <item
        android:id="@+id/saleFragment"
        android:icon="@drawable/ic_sale"
        android:title="@string/str_sale" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/str_profile" />

</menu>