<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.employee.UpdateUserFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="350dp"
                android:scaleType="fitCenter"
                android:src="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tv_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/str_name"
                    android:textColor="@color/color_secondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/str_phone_number"
                    android:textColor="@color/color_secondary"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/str_status"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextAppearance="@style/default_text_appearance">

                    <AutoCompleteTextView
                        android:id="@+id/tv_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/str_active"
                        android:textAllCaps="true"
                        android:textColor="@color/color_secondary"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/str_role"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextAppearance="@style/default_text_appearance">

                    <AutoCompleteTextView
                        android:id="@+id/tv_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/str_admin"
                        android:textAllCaps="true"
                        android:textColor="@color/color_secondary"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/toggleButtonStatus">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/str_cancel"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@color/color_disable"
                    app:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/str_save"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@color/color_success"
                    app:cornerRadius="5dp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/str_invisible_user"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:backgroundTint="@color/color_error"
                app:cornerRadius="5dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/frame_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_primary" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>