<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/str_save_changing"
            android:textColor="@color/color_secondary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/str_cancel"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:backgroundTint="@color/color_disable"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/str_ok"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:backgroundTint="@color/color_success"
                app:cornerRadius="5dp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>