<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/str_login"
            android:textColor="@color/color_primary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone"
            style="@style/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/str_phone_number"
            app:prefixText="+998"
            app:prefixTextAppearance="@style/prefix_text_appearance"
            app:prefixTextColor="@color/color_secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="phone"
                android:maxLength="9"
                android:textColor="@color/color_secondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            style="@style/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/str_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                android:textColor="@color/color_secondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/str_login"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:backgroundTint="@color/color_secondary"
                app:cornerRadius="5dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/color_primary"
                android:visibility="invisible" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="end|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/str_dont_account"
                android:textColor="@color/color_secondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/str_register"
                android:textColor="@color/color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>